// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Polygon snapshots evaluate with correct answer renders 1`] = `
<PolygonComponent
  classes={
    Object {
      "base": "PolygonComponent-base-1 base",
    }
  }
  disabled={false}
  height={200}
  hotspotColor="rgba(137, 183, 244, 0.65)"
  id="1"
  isCorrect={true}
  isEvaluateMode={true}
  onClick={[MockFunction]}
  outlineColor="blue"
  points={
    Array [
      Object {
        "x": 94,
        "y": 4,
      },
      Object {
        "x": 89,
        "y": 4,
      },
      Object {
        "x": 36,
        "y": 40,
      },
    ]
  }
  selected={false}
  strokeWidth={5}
/>
`;

exports[`Polygon snapshots hotspot color renders 1`] = `
<PolygonComponent
  classes={
    Object {
      "base": "PolygonComponent-base-1 base",
    }
  }
  disabled={false}
  height={200}
  hotspotColor="rgba(217, 30, 24, 0.65)"
  id="1"
  isCorrect={false}
  isEvaluateMode={false}
  onClick={[MockFunction]}
  outlineColor="blue"
  points={
    Array [
      Object {
        "x": 94,
        "y": 4,
      },
      Object {
        "x": 89,
        "y": 4,
      },
      Object {
        "x": 36,
        "y": 40,
      },
    ]
  }
  selected={false}
  strokeWidth={5}
/>
`;

exports[`Polygon snapshots outline color renders 1`] = `
<PolygonComponent
  classes={
    Object {
      "base": "PolygonComponent-base-1 base",
    }
  }
  disabled={false}
  height={200}
  hotspotColor="rgba(137, 183, 244, 0.65)"
  id="1"
  isCorrect={false}
  isEvaluateMode={false}
  onClick={[MockFunction]}
  outlineColor="red"
  points={
    Array [
      Object {
        "x": 94,
        "y": 4,
      },
      Object {
        "x": 89,
        "y": 4,
      },
      Object {
        "x": 36,
        "y": 40,
      },
    ]
  }
  selected={false}
  strokeWidth={5}
/>
`;

exports[`Polygon snapshots outline width renders with default border width 1`] = `
<PolygonComponent
  classes={
    Object {
      "base": "PolygonComponent-base-1 base",
    }
  }
  disabled={false}
  height={200}
  hotspotColor="rgba(137, 183, 244, 0.65)"
  id="1"
  isCorrect={false}
  isEvaluateMode={false}
  onClick={[MockFunction]}
  outlineColor="blue"
  points={
    Array [
      Object {
        "x": 94,
        "y": 4,
      },
      Object {
        "x": 89,
        "y": 4,
      },
      Object {
        "x": 36,
        "y": 40,
      },
    ]
  }
  selected={false}
  strokeWidth={5}
/>
`;

exports[`Polygon snapshots outline width renders with given border width 1`] = `
<PolygonComponent
  classes={
    Object {
      "base": "PolygonComponent-base-1 base",
    }
  }
  disabled={false}
  height={200}
  hotspotColor="rgba(137, 183, 244, 0.65)"
  id="1"
  isCorrect={false}
  isEvaluateMode={false}
  onClick={[MockFunction]}
  outlineColor="blue"
  points={
    Array [
      Object {
        "x": 94,
        "y": 4,
      },
      Object {
        "x": 89,
        "y": 4,
      },
      Object {
        "x": 36,
        "y": 40,
      },
    ]
  }
  selected={false}
  strokeWidth={10}
/>
`;
